--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://kevinritonga.my.id/preview.jpg" />
 
     <!-- 🌐 Web App & Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
