--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     
     <!-- 🧠 Basic SEO -->
-    <title>Kevin Ritonga - Portofolio</title>
+    <title>Kevin Ritonga - Portfolio</title>
     <meta name="description" content="Portfolio resmi Kevin Suyadi Ritonga - UI/UX Designer dan Front-End Developer dari Indonesia." />
-    <meta name="keywords" content="Kevin Ritonga, UI/UX, Front-End, React, Portfolio" />
+    <meta name="keywords" content="Kevin Ritonga, UI/UX, Front-End, React, Portfolio, Portofolio" />
     <meta name="author" content="Kevin Suyadi Ritonga" />
 
     <!-- 🎯 Open Graph untuk sharing -->
