--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
     <!-- 🌐 Web App & Icons -->
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- 🎨 External Styles & Icons -->
