--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- 🧠 Basic SEO -->
     <title>Kevin Ritonga - Portfolio</title>
     <meta name="description" content="Portfolio resmi Kevin Suyadi Ritonga - UI/UX Designer dan Front-End Developer dari Indonesia." />
-    <meta name="keywords" content="Kevin Ritonga, UI/UX, Front-End, React, Portfolio, Portofolio" />
+    <meta name="keywords" content="Kevin Ritonga, UI/UX, Front-End, React, Portfolio" />
     <meta name="author" content="Kevin Suyadi Ritonga" />
 
     <!-- 🎯 Open Graph untuk sharing -->
